# sci-file

./: Cargo.toml  README.md
src/: file_io.rs  interpolator.rs  lib.rs
src/interpolator/: tests.rs
tests/: example1.csv  example2.csv
tests/bad/: missing_field.csv  wrong_type.csv
